# odh-test

./: README.md  pyproject.toml  requirements.txt
modelServer/: test2.py  test_ovms_model_deployment.py
modelServer/simple_model_deployment/: test2.py  test_dual_model_auth.py  test_model_deployment_oci.py
odh/odhlibs/: cluster_roles_ops.py  constant.py  inference_service_ops.py  kubectl_hacks.py  log_utils.py  loggable.py  namespace_ops.py  pods_ops.py  request_ops.py  serving_runtime_ops.py  temp.py  utils.py
odh/odhlibs/inference_service_template/: isvc_template.jinja2
odh/odhlibs/serving_runtime_templates/: caikit-standalone-serving-template.jinja2  kserve-ovms.jinja2  vllm-runtime-template.jinja2
odh/odhlibs/serving_runtime_updated/: isvc_template.yaml  kserve-ovms.yaml
odh_model_server/base/: baseClass.py  odh_main.py
src/: carteplex.py  colorfiable.py  configurable.py  core.py  main.py
test/: test_01.py  test_odh_base_class.py  test_odh_config.py
